name:                lp-diagrams
version:             1.0
synopsis:            An EDSL for diagrams based based on linear constraints
license:             AGPL-3
license-file:        LICENSE
author:              Jean-Philippe Bernardy
maintainer:          jeanphilippe.bernardy@gmail.com
copyright:           Jean-Philippe Bernardy
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.18

library
  exposed-modules:     Graphics.Diagrams.Object,
                       Graphics.Diagrams.Graphviz,
                       Graphics.Diagrams.Path,
                       Graphics.Diagrams.Plot,
                       Graphics.Diagrams.Point,
                       Graphics.Diagrams.Core,
                       Graphics.Diagrams
  build-depends:       base >=4.8,
                       lens >=4.12,
                       graphviz >=2999.18,
                       text >=1.2 ,
                       typography-geometry >=1.0 ,
                       glpk-hs >=0.3 ,
                       vector >=0.11 ,
                       polynomials-bernstein >=1.1 ,
                       mtl >=2.2 ,
                       containers >=0.5
  default-language:    Haskell2010